--- a/metadata.yaml
+++ b/metadata.yaml
@@ -39,5 +39,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'History -- Outlines, syllabi, etc.'
 - !lcc 'D'
+- GITenberg
 title: Auszug aus der Alten, Mittleren und Neueren Geschichte
 url: http://www.gutenberg.org/ebooks/44136
